--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -44,6 +44,7 @@ jobs:
   build-docker-image:
     name: Build and store docker image in github packages
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
